--- a/index.html
+++ b/index.html
@@ -280,23 +280,22 @@
                         un-interruptedly.
                     </p>
 
-                    <!-- $host = $env["host"];
-$dbname = $env["dbname"];
-$username = $env["username"];
-$password = $env["password"]; 
-
-host=localhost
-dbname=MyDB
-username=root
-password=
-
--->
+                    <!-- 
+                        $host = $env["host"];
+                        $dbname = $env["dbname"];
+                        $username = $env["username"];
+                        $password = $env["password"]; 
+                        host=localhost
+                        dbname=MyDB
+                        username=root
+                        password=
+                    -->
 
                     <form action="1-list-cloudflare-videos.php" method="POST" id="credentialsForm">
                         <div class="form-group">
-                            <label for="X-Auth-Email">DB Host</label>
-                            <input type="email" class="form-control form-control-sm" id="X-Auth-Email"
-                                aria-describedby="emailHelp" placeholder="fwd82@live.com" name="X-Auth-Email"
+                            <label for="db_host">DB Host</label>
+                            <input type="email" class="form-control form-control-sm" id="db_host"
+                                aria-describedby="emailHelp" placeholder="fwd82@live.com" name="db_host"
                                 value="localhost">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your X Auth Email with
                                 anyone
@@ -304,22 +303,22 @@ password=
                         </div>
                         <div class="form-group">
                             <label for="X-Auth-Key">DB Name</label>
-                            <input type="text" class="form-control form-control-sm" id="X-Auth-Key"
-                                placeholder="1eab14593a06d3722782f30526a779378a5ee" name="X-Auth-Key" value="MyDB">
+                            <input type="text" class="form-control form-control-sm" id="db_name"
+                                placeholder="1eab14593a06d3722782f30526a779378a5ee" name="db_name" value="MyDB">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your Auth Key with
                                 anyone else.</small>
                         </div>
                         <div class="form-group">
                             <label for="account_id">DB Username</label>
-                            <input type="text" class="form-control form-control-sm" id="account_id"
-                                placeholder="2590b14a48271988be21c06479697cee" name="account_id" value="root">
+                            <input type="text" class="form-control form-control-sm" id="db_username"
+                                placeholder="2590b14a48271988be21c06479697cee" name="db_username" value="root">
                             <small id="account_id" class="form-text text-muted">We'll never share your Account ID with
                                 anyone else.</small>
                         </div>
                         <div class="form-group">
                             <label for="customer_subdomain">DB Password</label>
-                            <input type="text" class="form-control form-control-sm" id="customer_subdomain"
-                                placeholder="" name="customer_subdomain" value="">
+                            <input type="text" class="form-control form-control-sm" id="db_password"
+                                placeholder="" name="db_password" value="">
                             <small id="account_id" class="form-text text-muted">We'll never share your Customer
                                 subdomain with
                                 anyone else.</small>
@@ -339,26 +338,26 @@ password=
                     <h6 class="card-text text-primary">Updating database from Cloudstream links to Huawei Cloud VOD
                         links </h6>
                     <p class="card-text">
+
                         Now open <code>5-script_db.php</code> and change the configuration for <code>$host</code>,
                         <code>$dbname</code>, <code>$username</code> and <code>$password</code>. That's it, just click
-                        on below <code>Update the links</code> and you database will be updated with new links
+                        on below2 <code>Update the links</code> and you database will be updated with new links
                     </p>
                     </p>
                     <p class="card-text">
                         Until this stage, our videos are successfully migrated to <code>Huawei Cloud VOD</code> from
                         <code>Cloudflare Cloudstream</code>.
                     </p>
-                    <a class="btn btn-primary btn-sm" href="5-script_db.php" target="_blank" role="button">Update the
-                        links</a>
+                    
+                    <!-- <a class="btn btn-primary btn-sm" href="5-script_db.php" target="_blank" role="button">Update the -->
+                        <!-- links</a> -->
+                    <a class="btn btn-primary btn-sm" id="updateMySqlDbLinks" role="button">Update MySQL DB Links</a>
                 </div>
             </div>
             <!-- eof Sixth Step -->
             <br />
 
-
             <br>
-
-
 
         </div>
 
