--- a/index.html
+++ b/index.html
@@ -355,10 +355,10 @@ password=
                         Until this stage, our videos are successfully migrated to <code>Huawei Cloud VOD</code> from
                         <code>Cloudflare Cloudstream</code>.
                     </p>
-                    <a class="btn btn-primary btn-sm" id="updateMySqlDbLinks" role="button">Update the
-                        links</a>
+                    <a class="btn btn-primary btn-sm" id="updateMySqlDbLinks" role="button">Update the links</a>
 
-                        <div id="mysql_response"></div>
+                    <br /><br />
+                    <div id="mysql_response2"></div>
                 </div>
             </div>
             <!-- eof Sixth Step -->
