Adding Get Huawei Links

--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
                         style='min-width: 100%; font-size: 10pt'></textarea>
                         <br />
                     <a class="btn btn-primary btn-sm" id="updateMySqlDbLinks" role="button">Update the links</a>
+                    <a class="btn btn-primary btn-sm" id="getHuaweiVODLinks" role="button">#getHuaweiVODLinks</a>
 
                     <br /><br />
                     <div id="mysql_response2"></div>
