--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
                         <br />
                     <a class="btn btn-primary btn-sm" id="updateMySqlDbLinks" role="button">Update the links</a>
                     <a class="btn btn-primary btn-sm" id="getHuaweiVODLinks" role="button">#getHuaweiVODLinks</a>
+                    <a class="btn btn-primary btn-sm" id="listTemplateGroup" role="button">#listTemplateGroup</a>
 
                     <br /><br />
                     <div id="mysql_response2"></div>
