Adding select and option from APIs

--- a/index.html
+++ b/index.html
@@ -223,12 +223,13 @@
                                         <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
                                     </svg>
                                 </a>
-                                
+
                                 <select class="form-control form-control-sm" id="videoTemplateGroupName" name="videoTemplateGroupName">
-                                    <option value="HLS_H264">HLS_264</option>
+                                    <option value=""></option>
+                                    <!-- <option value="HLS_H264">HLS_264</option>
                                     <option value="HLS_265">HLS_265</option>
                                     <option value="VP9">VP9</option>
-                                    <option value="AV1">AV1</option>
+                                    <option value="AV1">AV1</option> -->
                                 </select>
                                 
                                 <small id="projectId" class="form-text text-muted">We'll never share your Project ID with
